# backend

./: .gitignore  LICENSE  README.md  analysis.ipynb  helpers.py  main.py  manual_test.py  plotter.py  pyproject.toml  requirements.txt  test_real_gpx.py
curve_smoothing/: curve_smoothing_algo_added.ipynb
curve_smoothing/src/: loess_v1.py  loess_v2.py  spline_fit.py
curve_smoothing/test/: test_loess_v2.py  test_spline_fit.py
data/: 2024-10-17_13_02_around_thi.gpx  2024-10-24_12_42_hohe_mandel.gpx  24-Apr-2025-scooter.gpx  31_Mar_2025_10_30_57.gpx  DollnsteinRoutePrashil.gpx  DollnsteinRouteTom.gpx  around_uni_gold.gpx  around_uni_williams.gpx
docs/: class_diagram_elevation_api.md  class_diagram_models.md  curve_smoothing_algo.ipynb  models_class_diagram.md  plotter_class_diagram.md
gpx_dataengine/: elevation_apis.py  elevationapi.py  elevationprofile.py  geo_tools.py  gpx_parser.py  gpxdata.py  helpers_new.py  lookup.py  main.py  models.py  plotter.py
notebooks/: analysis.ipynb  backend_feature_examples.ipynb
src/: compare_elevations.py  elevation_api.py  models.py  plotter.py
src/gpx_dataengine/: compare_elevations.py  (+6 more)
test/: GPX_FUNCTIONALITY.md  demo_alignment.py  demo_corrected_interpolation.py  demo_interpolation.py  run_tests.py  test_alignment_simple.py  test_elevation_api.py  test_gpx_alignment.py  test_gpx_alignment_unittest.py  test_gpx_functionality.py  test_gpx_interpolation.py  test_gpx_interpolation_corrected.py  test_gpx_interpolation_simple.py  test_gpx_interpolation_unittest.py  test_gpx_logic_unittest.py  test_models.py  test_plotter.py
(+5 files in other folders)
