[project]
name = "backend"
version = "0.0.0-dev"
description = ""
authors = []
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pygeodesy (>=25.5.28,<26.0.0)",
    "gpxpy (>=1.6.2,<2.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

